overflow heightmap fix

--- a/client/styles/features/_line-summary.scss
+++ b/client/styles/features/_line-summary.scss
@@ -24,8 +24,6 @@
   }
 
   &__height-map {
-    width: 300px;
-    max-width: 100%;
     overflow: hidden;
   }
 
